--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         <nav class="dropdown-pane" data-position="bottom" data-alignment="right" id="example-dropdown-bottom-right" data-dropdown data-auto-focus="true">
           <!-- My dropdown content in here -->
           <ul>
-            <li><a href="food.html">Food</a></li>
-            <li><a href="drinks.html">Drinks</a></li>
-            <li><a href="location.html">Location</a></li>
-            <li><a href="staff.html">Our&nbsp;Staff</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="pages/food.html">Food</a></li>
+            <li><a href="pages/drinks.html">Drinks</a></li>
+            <li><a href="pages/location.html">Location</a></li>
+            <li><a href="pages/staff.html">Our&nbsp;Staff</a></li>
+            <li><a href="pages/contact.html">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -93,12 +93,12 @@
     <!-- Food Tab -->
     <div id="first-box" class="grid-x grid-padding-x">
       <div  class="small-12 medium-4 cell">
-        <a href="">
+        <a href="pages/food.html">
           <img src="images/food.jpg" alt="">
         </a>
       </div>
       <div class="small-12 medium-8 cell nav-box-odd text-center">
-        <a href="">
+        <a href="pages/food.html">
           Food
         </a>
       </div>
@@ -107,12 +107,12 @@
     <!-- Drinks Tab-->
     <div class="grid-x grid-padding-x">
       <div class="small-12 medium-4 cell">
-        <a href="">
+        <a href="pages/drinks.html">
           <img src="images/drinks.jpg" alt="">
         </a>
       </div>
       <div class="small-12 medium-8 cell nav-box-even text-center">
-        <a href="">
+        <a href="pages/drinks.html">
           Drinks
         </a>
       </div>
@@ -149,12 +149,12 @@
     <!-- Contact Tab -->
     <div class="grid-x grid-padding-x">
         <div class="small-12 medium-4 cell">
-          <a href="">
+          <a href="pages/contact.html">
             <img src="images/contact.jpg" alt="">
           </a>
         </div>
         <div class="small-12 medium-8 cell nav-box-odd text-center">
-          <a href="">
+          <a href="pages/contact.html">
             Contact
           </a>
         </div>
